--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@prisma/client": "^5.20.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.2",
